--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,229 @@
-# Your requirements go here
+autopep8==1.7.0
+  - pycodestyle [required: >=2.9.1, installed: 2.9.1]
+  - toml [required: Any, installed: 0.10.2]
+bandit==1.7.4
+  - GitPython [required: >=1.0.1, installed: 3.1.27]
+    - gitdb [required: >=4.0.1,<5, installed: 4.0.9]
+      - smmap [required: >=3.0.1,<6, installed: 5.0.0]
+  - PyYAML [required: >=5.3.1, installed: 6.0]
+  - stevedore [required: >=1.20.0, installed: 4.0.0]
+    - pbr [required: >=2.0.0,!=2.1.0, installed: 5.10.0]
+flake8==5.0.4
+  - mccabe [required: >=0.7.0,<0.8.0, installed: 0.7.0]
+  - pycodestyle [required: >=2.9.0,<2.10.0, installed: 2.9.1]
+  - pyflakes [required: >=2.5.0,<2.6.0, installed: 2.5.0]
+mypy==0.982
+  - mypy-extensions [required: >=0.4.3, installed: 0.4.3]
+  - tomli [required: >=1.1.0, installed: 2.0.1]
+  - typing-extensions [required: >=3.10, installed: 4.3.0]
+notebook==6.4.12
+  - argon2-cffi [required: Any, installed: 21.3.0]
+    - argon2-cffi-bindings [required: Any, installed: 21.2.0]
+      - cffi [required: >=1.0.1, installed: 1.15.1]
+        - pycparser [required: Any, installed: 2.21]
+  - ipykernel [required: Any, installed: 6.16.0]
+    - debugpy [required: >=1.0, installed: 1.6.3]
+    - ipython [required: >=7.23.1, installed: 8.5.0]
+      - backcall [required: Any, installed: 0.2.0]
+      - decorator [required: Any, installed: 5.1.1]
+      - jedi [required: >=0.16, installed: 0.18.1]
+        - parso [required: >=0.8.0,<0.9.0, installed: 0.8.3]
+      - matplotlib-inline [required: Any, installed: 0.1.6]
+        - traitlets [required: Any, installed: 5.4.0]
+      - pexpect [required: >4.3, installed: 4.8.0]
+        - ptyprocess [required: >=0.5, installed: 0.7.0]
+      - pickleshare [required: Any, installed: 0.7.5]
+      - prompt-toolkit [required: >3.0.1,<3.1.0, installed: 3.0.31]
+        - wcwidth [required: Any, installed: 0.2.5]
+      - pygments [required: >=2.4.0, installed: 2.13.0]
+      - stack-data [required: Any, installed: 0.5.1]
+        - asttokens [required: Any, installed: 2.0.8]
+          - six [required: Any, installed: 1.16.0]
+        - executing [required: Any, installed: 1.1.0]
+        - pure-eval [required: Any, installed: 0.2.2]
+      - traitlets [required: >=5, installed: 5.4.0]
+    - jupyter-client [required: >=6.1.12, installed: 7.3.5]
+      - entrypoints [required: Any, installed: 0.4]
+      - jupyter-core [required: >=4.9.2, installed: 4.11.1]
+        - traitlets [required: Any, installed: 5.4.0]
+      - nest-asyncio [required: >=1.5.4, installed: 1.5.6]
+      - python-dateutil [required: >=2.8.2, installed: 2.8.2]
+        - six [required: >=1.5, installed: 1.16.0]
+      - pyzmq [required: >=23.0, installed: 24.0.1]
+      - tornado [required: >=6.2, installed: 6.2]
+      - traitlets [required: Any, installed: 5.4.0]
+    - matplotlib-inline [required: >=0.1, installed: 0.1.6]
+      - traitlets [required: Any, installed: 5.4.0]
+    - nest-asyncio [required: Any, installed: 1.5.6]
+    - packaging [required: Any, installed: 21.3]
+      - pyparsing [required: >=2.0.2,!=3.0.5, installed: 3.0.9]
+    - psutil [required: Any, installed: 5.9.2]
+    - pyzmq [required: >=17, installed: 24.0.1]
+    - tornado [required: >=6.1, installed: 6.2]
+    - traitlets [required: >=5.1.0, installed: 5.4.0]
+  - ipython-genutils [required: Any, installed: 0.2.0]
+  - jinja2 [required: Any, installed: 3.1.2]
+    - MarkupSafe [required: >=2.0, installed: 2.1.1]
+  - jupyter-client [required: >=5.3.4, installed: 7.3.5]
+    - entrypoints [required: Any, installed: 0.4]
+    - jupyter-core [required: >=4.9.2, installed: 4.11.1]
+      - traitlets [required: Any, installed: 5.4.0]
+    - nest-asyncio [required: >=1.5.4, installed: 1.5.6]
+    - python-dateutil [required: >=2.8.2, installed: 2.8.2]
+      - six [required: >=1.5, installed: 1.16.0]
+    - pyzmq [required: >=23.0, installed: 24.0.1]
+    - tornado [required: >=6.2, installed: 6.2]
+    - traitlets [required: Any, installed: 5.4.0]
+  - jupyter-core [required: >=4.6.1, installed: 4.11.1]
+    - traitlets [required: Any, installed: 5.4.0]
+  - nbconvert [required: >=5, installed: 7.1.0]
+    - beautifulsoup4 [required: Any, installed: 4.11.1]
+      - soupsieve [required: >1.2, installed: 2.3.2.post1]
+    - bleach [required: Any, installed: 5.0.1]
+      - six [required: >=1.9.0, installed: 1.16.0]
+      - webencodings [required: Any, installed: 0.5.1]
+    - defusedxml [required: Any, installed: 0.7.1]
+    - importlib-metadata [required: >=3.6, installed: 5.0.0]
+      - zipp [required: >=0.5, installed: 3.8.1]
+    - jinja2 [required: >=3.0, installed: 3.1.2]
+      - MarkupSafe [required: >=2.0, installed: 2.1.1]
+    - jupyter-core [required: >=4.7, installed: 4.11.1]
+      - traitlets [required: Any, installed: 5.4.0]
+    - jupyterlab-pygments [required: Any, installed: 0.2.2]
+    - markupsafe [required: >=2.0, installed: 2.1.1]
+    - mistune [required: >=2.0.3,<3, installed: 2.0.4]
+    - nbclient [required: >=0.5.0, installed: 0.6.8]
+      - jupyter-client [required: >=6.1.5, installed: 7.3.5]
+        - entrypoints [required: Any, installed: 0.4]
+        - jupyter-core [required: >=4.9.2, installed: 4.11.1]
+          - traitlets [required: Any, installed: 5.4.0]
+        - nest-asyncio [required: >=1.5.4, installed: 1.5.6]
+        - python-dateutil [required: >=2.8.2, installed: 2.8.2]
+          - six [required: >=1.5, installed: 1.16.0]
+        - pyzmq [required: >=23.0, installed: 24.0.1]
+        - tornado [required: >=6.2, installed: 6.2]
+        - traitlets [required: Any, installed: 5.4.0]
+      - nbformat [required: >=5.0, installed: 5.6.1]
+        - fastjsonschema [required: Any, installed: 2.16.2]
+        - jsonschema [required: >=2.6, installed: 4.16.0]
+          - attrs [required: >=17.4.0, installed: 22.1.0]
+          - importlib-resources [required: >=1.4.0, installed: 5.9.0]
+            - zipp [required: >=3.1.0, installed: 3.8.1]
+          - pkgutil-resolve-name [required: >=1.3.10, installed: 1.3.10]
+          - pyrsistent [required: >=0.14.0,!=0.17.2,!=0.17.1,!=0.17.0, installed: 0.18.1]
+        - jupyter-core [required: Any, installed: 4.11.1]
+          - traitlets [required: Any, installed: 5.4.0]
+        - traitlets [required: >=5.1, installed: 5.4.0]
+      - nest-asyncio [required: Any, installed: 1.5.6]
+      - traitlets [required: >=5.2.2, installed: 5.4.0]
+    - nbformat [required: >=5.1, installed: 5.6.1]
+      - fastjsonschema [required: Any, installed: 2.16.2]
+      - jsonschema [required: >=2.6, installed: 4.16.0]
+        - attrs [required: >=17.4.0, installed: 22.1.0]
+        - importlib-resources [required: >=1.4.0, installed: 5.9.0]
+          - zipp [required: >=3.1.0, installed: 3.8.1]
+        - pkgutil-resolve-name [required: >=1.3.10, installed: 1.3.10]
+        - pyrsistent [required: >=0.14.0,!=0.17.2,!=0.17.1,!=0.17.0, installed: 0.18.1]
+      - jupyter-core [required: Any, installed: 4.11.1]
+        - traitlets [required: Any, installed: 5.4.0]
+      - traitlets [required: >=5.1, installed: 5.4.0]
+    - packaging [required: Any, installed: 21.3]
+      - pyparsing [required: >=2.0.2,!=3.0.5, installed: 3.0.9]
+    - pandocfilters [required: >=1.4.1, installed: 1.5.0]
+    - pygments [required: >=2.4.1, installed: 2.13.0]
+    - tinycss2 [required: Any, installed: 1.1.1]
+      - webencodings [required: >=0.4, installed: 0.5.1]
+    - traitlets [required: >=5.0, installed: 5.4.0]
+  - nbformat [required: Any, installed: 5.6.1]
+    - fastjsonschema [required: Any, installed: 2.16.2]
+    - jsonschema [required: >=2.6, installed: 4.16.0]
+      - attrs [required: >=17.4.0, installed: 22.1.0]
+      - importlib-resources [required: >=1.4.0, installed: 5.9.0]
+        - zipp [required: >=3.1.0, installed: 3.8.1]
+      - pkgutil-resolve-name [required: >=1.3.10, installed: 1.3.10]
+      - pyrsistent [required: >=0.14.0,!=0.17.2,!=0.17.1,!=0.17.0, installed: 0.18.1]
+    - jupyter-core [required: Any, installed: 4.11.1]
+      - traitlets [required: Any, installed: 5.4.0]
+    - traitlets [required: >=5.1, installed: 5.4.0]
+  - nest-asyncio [required: >=1.5, installed: 1.5.6]
+  - prometheus-client [required: Any, installed: 0.14.1]
+  - pyzmq [required: >=17, installed: 24.0.1]
+  - Send2Trash [required: >=1.8.0, installed: 1.8.0]
+  - terminado [required: >=0.8.3, installed: 0.16.0]
+    - ptyprocess [required: Any, installed: 0.7.0]
+    - tornado [required: >=6.1.0, installed: 6.2]
+  - tornado [required: >=6.1, installed: 6.2]
+  - traitlets [required: >=4.2.1, installed: 5.4.0]
+pep8==1.7.1
+pip==22.3
+pipdeptree==2.3.1
+pipenv==2022.10.4
+  - certifi [required: Any, installed: 2022.9.24]
+  - setuptools [required: >=36.2.1, installed: 65.4.1]
+  - virtualenv [required: Any, installed: 20.16.5]
+    - distlib [required: >=0.3.5,<1, installed: 0.3.6]
+    - filelock [required: >=3.4.1,<4, installed: 3.8.0]
+    - platformdirs [required: >=2.4,<3, installed: 2.5.2]
+  - virtualenv-clone [required: >=0.2.5, installed: 0.5.7]
+pylama==8.4.1
+  - mccabe [required: >=0.7.0, installed: 0.7.0]
+  - pycodestyle [required: >=2.9.1, installed: 2.9.1]
+  - pydocstyle [required: >=6.1.1, installed: 6.1.1]
+    - snowballstemmer [required: Any, installed: 2.2.0]
+  - pyflakes [required: >=2.5.0, installed: 2.5.0]
+pylint==2.15.3
+  - astroid [required: >=2.12.10,<=2.14.0-dev0, installed: 2.12.10]
+    - lazy-object-proxy [required: >=1.4.0, installed: 1.7.1]
+    - typing-extensions [required: >=3.10, installed: 4.3.0]
+    - wrapt [required: >=1.11,<2, installed: 1.14.1]
+  - dill [required: >=0.2, installed: 0.3.5.1]
+  - isort [required: >=4.2.5,<6, installed: 5.10.1]
+  - mccabe [required: >=0.6,<0.8, installed: 0.7.0]
+  - platformdirs [required: >=2.2.0, installed: 2.5.2]
+  - tomli [required: >=1.1.0, installed: 2.0.1]
+  - tomlkit [required: >=0.10.1, installed: 0.11.5]
+  - typing-extensions [required: >=3.10.0, installed: 4.3.0]
+rope==1.3.0
+  - pytoolconfig [required: >=1.1.2, installed: 1.2.2]
+    - packaging [required: >=21.3, installed: 21.3]
+      - pyparsing [required: >=2.0.2,!=3.0.5, installed: 3.0.9]
+    - tomli [required: >=2.0, installed: 2.0.1]
+twine==4.0.1
+  - importlib-metadata [required: >=3.6, installed: 5.0.0]
+    - zipp [required: >=0.5, installed: 3.8.1]
+  - keyring [required: >=15.1, installed: 23.9.3]
+    - importlib-metadata [required: >=3.6, installed: 5.0.0]
+      - zipp [required: >=0.5, installed: 3.8.1]
+    - jaraco.classes [required: Any, installed: 3.2.3]
+      - more-itertools [required: Any, installed: 8.14.0]
+    - jeepney [required: >=0.4.2, installed: 0.8.0]
+    - SecretStorage [required: >=3.2, installed: 3.3.3]
+      - cryptography [required: >=2.0, installed: 38.0.1]
+        - cffi [required: >=1.12, installed: 1.15.1]
+          - pycparser [required: Any, installed: 2.21]
+      - jeepney [required: >=0.6, installed: 0.8.0]
+  - pkginfo [required: >=1.8.1, installed: 1.8.3]
+  - readme-renderer [required: >=35.0, installed: 37.2]
+    - bleach [required: >=2.1.0, installed: 5.0.1]
+      - six [required: >=1.9.0, installed: 1.16.0]
+      - webencodings [required: Any, installed: 0.5.1]
+    - docutils [required: >=0.13.1, installed: 0.19]
+    - Pygments [required: >=2.5.1, installed: 2.13.0]
+  - requests [required: >=2.20, installed: 2.28.1]
+    - certifi [required: >=2017.4.17, installed: 2022.9.24]
+    - charset-normalizer [required: >=2,<3, installed: 2.1.1]
+    - idna [required: >=2.5,<4, installed: 3.4]
+    - urllib3 [required: >=1.21.1,<1.27, installed: 1.26.12]
+  - requests-toolbelt [required: >=0.8.0,!=0.9.0, installed: 0.9.1]
+    - requests [required: >=2.0.1,<3.0.0, installed: 2.28.1]
+      - certifi [required: >=2017.4.17, installed: 2022.9.24]
+      - charset-normalizer [required: >=2,<3, installed: 2.1.1]
+      - idna [required: >=2.5,<4, installed: 3.4]
+      - urllib3 [required: >=1.21.1,<1.27, installed: 1.26.12]
+  - rfc3986 [required: >=1.4.0, installed: 2.0.0]
+  - rich [required: >=12.0.0, installed: 12.6.0]
+    - commonmark [required: >=0.9.0,<0.10.0, installed: 0.9.1]
+    - pygments [required: >=2.6.0,<3.0.0, installed: 2.13.0]
+    - typing-extensions [required: >=4.0.0,<5.0, installed: 4.3.0]
+  - urllib3 [required: >=1.26.0, installed: 1.26.12]
+wheel==0.37.1
